update plus loin

--- a/plus_loin.ipynb
+++ b/plus_loin.ipynb
@@ -82,21 +82,27 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "np.random.seed(0)\n",
+    "# Fixer la seed pour comparer les formes de δ(t) sans être parasité par le hasard des rewards.\n",
     "\n",
     "def softmax(x):\n",
     "    x = x - np.max(x)\n",
     "    ex = np.exp(x)\n",
+    "    # Softmax stabilisé (shift par max) pour convertir une croyance temporelle en distribution normalisée.\n",
     "    return ex / (np.sum(ex) + 1e-12)\n",
     "\n",
     "def moving_avg(x, k=10):\n",
+    "    # Lissage visuel : je regarde la tendance moyenne du signal plutôt que les fluctuations bruitées d'un essai.\n",
     "    if k <= 1:\n",
     "        return x\n",
     "    kernel = np.ones(k) / k\n",
+    "    # Convolution simple pour lisser δ(t) et mieux voir les tendances phasiques.\n",
     "    return np.convolve(x, kernel, mode=\"same\")\n",
     "\n",
     "def plot_trials(delta_mat, title, smooth=5):\n",
+    "    # J'agrège les essais pour observer le déplacement du signal phasique comme dans les figures du papier.\n",
     "    \"\"\"delta_mat: shape (n_trials, T)\"\"\"\n",
     "    mean = delta_mat.mean(axis=0)\n",
+    "    # Moyenne/écart-type sur les essais: on regarde la dynamique moyenne plutôt qu'un essai bruité.\n",
     "    std = delta_mat.std(axis=0)\n",
     "    m = moving_avg(mean, smooth)\n",
     "    s = moving_avg(std, smooth)\n",
@@ -106,6 +112,7 @@
     "    plt.plot(t, m)\n",
     "    plt.fill_between(t, m - s, m + s, alpha=0.2)\n",
     "    plt.axvline(0, linestyle=\"--\")\n",
+    "    # Ligne pointillée: temps du cue (origine de la chronologie).\n",
     "    plt.title(title)\n",
     "    plt.xlabel(\"Temps relatif au cue\")\n",
     "    plt.ylabel(\"Erreur TD δ(t)\")\n",
@@ -123,15 +130,21 @@
     "    def __init__(self, delay=30, p_reward=1.0, reward_mag=1.0):\n",
     "        self.delay = delay\n",
     "        self.p_reward = p_reward\n",
+    "        # p_reward<1 permet d'introduire des omissions pour tester la réponse négative.\n",
     "        self.reward_mag = reward_mag\n",
     "\n",
     "    def run_episode(self):\n",
+    "        # Paradigme minimal cue → délai → reward : un seul pic de récompense en fin de délai.\n",
     "        \"\"\"Retourne (true_times, rewards)\"\"\"\n",
     "        T = self.delay + 1  # inclut le pas du reward\n",
+    "        # On modélise un seul reward potentiel à la fin du délai; T inclut ce pas final.\n",
     "        true_t = np.arange(T)  # 0..delay\n",
+    "        # true_t: temps objectif; l'agent n'y a pas accès directement en présence d'incertitude.\n",
     "        r = np.zeros(T)\n",
+    "        # r[t] stocke la récompense instantanée; ici une seule impulsion possible à t=delay.\n",
     "        if np.random.rand() < self.p_reward:\n",
     "            r[-1] = self.reward_mag\n",
+    "        # Reward stochastique: magnitudes fixées mais délivrance probabiliste.\n",
     "        return true_t, r\n"
    ]
   },
@@ -147,17 +160,22 @@
     "        self.T = T\n",
     "        self.n_basis = n_basis\n",
     "        centers = np.linspace(0, T-1, n_basis)\n",
+    "        # Centres régulièrement espacés: chaque base couvre un segment du délai.\n",
     "        self.centers = centers\n",
+    "        # Bases gaussiennes = croyance distribuée sur 'où je suis dans le temps', utile quand l'horloge interne est bruitée.\n",
     "        self.sigma = sigma_basis\n",
     "\n",
     "    def phi(self, t_obs):\n",
     "        \"\"\"features normalisées (optionnel)\"\"\"\n",
     "        d2 = (t_obs - self.centers)**2\n",
+    "        # Distance quadratique = croyance sur la position temporelle via gaussiennes.\n",
     "        feats = np.exp(-0.5 * d2 / (self.sigma**2))\n",
+    "        # Activation radiale: plus t_obs est proche d'un centre, plus la base s'active.\n",
     "        # Normaliser rend la comparaison plus stable quand t_obs est hors-range\n",
     "        s = feats.sum()\n",
     "        if s > 1e-12:\n",
     "            feats = feats / s\n",
+    "        # Normalisation: rend le vecteur de features interprétable comme distribution temporelle.\n",
     "        return feats\n"
    ]
   },
@@ -197,22 +215,30 @@
     "    delay = env.delay\n",
     "    T = delay + 1\n",
     "    basis = TimeBasis(T, n_basis=n_basis)\n",
+    "    # Features temporelles partagées: moins de paramètres et diffusion naturelle du crédit.\n",
     "\n",
     "    w = np.zeros(n_basis)\n",
+    "    # Poids sur bases temporelles: ce sont les paramètres que TD met à jour.\n",
     "    deltas = np.zeros((n_trials, T))\n",
     "\n",
     "    for tr in range(n_trials):\n",
     "        true_t, r = env.run_episode()\n",
+    "        # Génération d'un essai cue→délai→(reward ou omission).\n",
     "        e = np.zeros_like(w)  # eligibility traces\n",
+    "        # Traces d'éligibilité initialisées à zéro (mémoire des features passées).\n",
+    "        # Les traces TD(λ) propagent le crédit en arrière : plus de λ => transfert plus rapide du reward vers le cue.\n",
     "\n",
     "        # On déroule l'épisode\n",
     "        for t in range(T):\n",
     "            # observation bruitée du temps\n",
+    "            # t_obs modélise le temps subjectif du sujet : bruit = incertitude temporelle discutée dans le papier.\n",
     "            t_obs = true_t[t] + np.random.normal(0, obs_sigma)\n",
+    "            # Horloge interne bruitée: on observe un temps subjectif t_obs.\n",
     "            t_obs = np.clip(t_obs, 0, T-1)\n",
     "            x = basis.phi(t_obs)\n",
     "\n",
     "            V = np.dot(w, x)\n",
+    "            # Valeur estimée au temps subjectif courant.\n",
     "\n",
     "            # next\n",
     "            if t < T-1:\n",
@@ -224,11 +250,15 @@
     "                V2 = 0.0\n",
     "\n",
     "            delta = r[t] + gamma * V2 - V\n",
+    "            # Erreur TD instantanée, utilisée à la fois pour δ(t) et l'update.\n",
     "            deltas[tr, t] = delta\n",
     "\n",
     "            # traces & update\n",
+    "            # Màj standard TD(λ): e accumule l'historique des features, w prend le delta pondéré par ces traces.\n",
     "            e = gamma * lam * e + x\n",
+    "            # Accumulation des traces (λ) + décroissance temporelle (γ).\n",
     "            w += alpha * delta * e\n",
+    "            # Mise à jour: plus λ est haut, plus le reward rétro-propage vite vers les états antérieurs.\n",
     "\n",
     "    return deltas\n"
    ]
@@ -293,10 +323,11 @@
    "source": [
     "env = CueDelayRewardEnv(delay=30, p_reward=1.0, reward_mag=1.0)\n",
     "\n",
+    "# Comparaison directe : TD(0) vs TD(λ>0) pour voir à quelle vitesse l'erreur migre du reward vers le cue.\n",
     "# TD(0)\n",
     "d_td0 = run_td_lambda(env, n_trials=300, lam=0.0, obs_sigma=0.0, alpha=0.08)\n",
     "# TD(lambda)\n",
-    "d_tdl = run_td_lambda(env, n_trials=300, lam=0.8, obs_sigma=0.0, alpha=0.06)\n",
+    "d_tdl = run_td_lambda(env, n_trials=300, lam=0.8, obs_sigma=0.0, alpha=0.06)  # λ élevé pour accélérer la diffusion du crédit.\n",
     "\n",
     "# comparer early vs late\n",
     "plot_trials(d_td0[:30], \"TD(0) - Début apprentissage (reward certain)\")\n",
@@ -304,6 +335,7 @@
     "\n",
     "plot_trials(d_tdl[:30], \"TD(λ=0.8) - Début apprentissage (reward certain)\")\n",
     "plot_trials(d_tdl[-30:], \"TD(λ=0.8) - Fin apprentissage (reward certain)\")\n",
+    "# Comparaison directe: différence de δ entre TD(0) et TD(λ) pour visualiser le gain de propagation.\n",
     "plot_trials(d_td0 - d_tdl, \"Différence TD(0) - TD(λ=0.8) (reward certain)\", smooth=1)\n"
    ]
   },
@@ -313,7 +345,13 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
-    "Les deux premiers graphiques (TD(0)) montrent que l'erreur δ(t) se déplace lentement du reward vers le cue, signe d'une propagation locale de l'information. Avec TD(λ=0.8), les deux suivants illustrent un transfert beaucoup plus rapide : les crêtes positives apparaissent tôt et le signal au reward s'aplatit. Le dernier panneau (différence TD(0)-TD(λ)) met en évidence le gain des traces d'éligibilité : δ(t) est plus fort juste après le cue et plus faible au reward lorsque λ>0, montrant une meilleure attribution crédit-temporel.\n",
+    "TD(0) (deux premiers graphes) montre une propagation locale: δ reste accroché au reward et ne recule que lentement vers le cue. On modélise une trace de crédit très courte; conséquence: l'anticipation prend de nombreux essais.\n",
+    "</div>\n",
+    "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
+    "TD(λ=0.8) (deux suivants) active des traces d'éligibilité: le pic positif surgit près du cue beaucoup plus tôt et le signal au reward s'écrase plus vite. Cela confirme expérimentalement que λ accélère le transfert de valeur temporelle.\n",
+    "</div>\n",
+    "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
+    "Différence TD(0) - TD(λ): on voit où TD(λ) gagne (plus de δ près du cue) et où il réduit l'erreur (moins de δ tardif). Conclusion: les traces d'éligibilité sont un mécanisme simple pour rapprocher la dynamique du modèle des rampes/déplacements observés en neuro.\n",
     "</div>\n"
    ]
   },
@@ -381,11 +419,13 @@
     }
    ],
    "source": [
-    "env_omit = CueDelayRewardEnv(delay=30, p_reward=0.7, reward_mag=1.0)\n",
+    "# p_reward<1 pour provoquer des omissions : on doit voir un 'dip' négatif quand le reward attendu n'arrive pas.\n",
+    "env_omit = CueDelayRewardEnv(delay=30, p_reward=0.7, reward_mag=1.0)  # reward manquant 30% du temps.\n",
     "\n",
     "d_omit = run_td_lambda(env_omit, n_trials=400, lam=0.8, obs_sigma=0.0, alpha=0.06)\n",
     "plot_trials(d_omit[-50:], \"TD(λ) - Fin apprentissage avec omissions (p_reward=0.7)\")\n",
-    "plot_trials(d_omit[-1:, :], \"TD(λ) - Dernier trial avec omission (test final)\")"
+    "# Dernier essai: on isole la trace pour voir le dip négatif exact.\n",
+    "plot_trials(d_omit[-1:, :], \"TD(λ) - Dernier trial avec omission (test final)\")\n"
    ]
   },
   {
@@ -394,7 +434,10 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
-    "Le premier graphique (fin d'entraînement avec omissions) montre que δ(t) présente une dépression nette au temps du reward attendu lorsque celui-ci manque, signe que le modèle anticipe la récompense. Le second panneau (dernier trial de test) isole cette déception : un pic négatif à l'instant attendu confirme que l'erreur TD encode l'absence de reward prédit.\n",
+    "Avec p_reward=0.7, le signal δ en fin d'apprentissage présente un dip négatif au temps attendu du reward: on modélise la déception d'une attente apprise. C'est exactement la signature expérimentale lors des omissions de reward.\n",
+    "</div>\n",
+    "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
+    "Le dernier essai isolé montre la forme complète: pic positif au cue, puis creux net quand le reward manque. Conclusion: même avec incertitude de livraison, le modèle encode une prédiction forte et la viole en absence de reward.\n",
     "</div>\n"
    ]
   },
@@ -475,11 +518,13 @@
     "env = CueDelayRewardEnv(delay=40, p_reward=1.0, reward_mag=1.0)\n",
     "\n",
     "d_no_unc = run_td_lambda(env, n_trials=500, lam=0.8, obs_sigma=0.0, alpha=0.05)\n",
-    "d_unc    = run_td_lambda(env, n_trials=500, lam=0.8, obs_sigma=3.0, alpha=0.05)\n",
+    "# obs_sigma>0 brouille le temps observé : le modèle garde une croyance floue sur la proximité du reward.\n",
+    "d_unc    = run_td_lambda(env, n_trials=500, lam=0.8, obs_sigma=3.0, alpha=0.05)  # incertitude temporelle simulée.\n",
     "\n",
     "plot_trials(d_no_unc[-50:], \"TD(λ) - Fin apprentissage (sans incertitude)\")\n",
     "plot_trials(d_unc[-50:], \"TD(λ) - Fin apprentissage (incertitude temporelle σ=3)\")\n",
-    "plot_trials(d_no_unc - d_unc, \"Différence sans incertitude - avec incertitude\", smooth=1)"
+    "# Différence: met en évidence la composante de ramp induite par l'incertitude.\n",
+    "plot_trials(d_no_unc - d_unc, \"Différence sans incertitude - avec incertitude\", smooth=1)\n"
    ]
   },
   {
@@ -488,7 +533,10 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
-    "Sans incertitude temporelle (premier panneau), δ(t) est concentré en un pic bref au cue et quasi nul ensuite. Avec incertitude (deuxième panneau), le signal s'étale : l'agent ne sait pas exactement quand arrive le reward et garde une activation plus large. La différence (troisième panneau) met en avant une réduction du pic bref et l'apparition d'une composante plus diffuse, transformant δ(t) en rampe.\n",
+    "Sans incertitude temporelle, δ(t) est bref et pointu: l'agent sait précisément où il est dans le délai, donc toute l'erreur se concentre au cue. Avec incertitude (σ=3), le signal s'étale et forme une ramp, car l'agent maintient une croyance diffuse sur le moment du reward.\n",
+    "</div>\n",
+    "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
+    "La différence met en évidence la composante supplémentaire induite par l'incertitude: elle n'émerge pas d'un nouveau mécanisme, mais de la simple propagation des croyances temporelles bruitées. Conclusion: on peut obtenir des ramps dopaminergiques en ajoutant une incertitude temporelle réaliste.\n",
     "</div>\n"
    ]
   },
@@ -552,6 +600,7 @@
    "source": [
     "def run_sr(env, n_trials=400, gamma=0.98, alpha_M=0.2, alpha_r=0.2, change_reward_at=None, new_reward_mag=2.0):\n",
     "    \"\"\"\n",
+    "    SR factorise la dynamique (M) et la reward instantanée rhat : on peut revaloriser sans réapprendre tout le timing.\n",
     "    SR sur états discrets t=0..delay.\n",
     "    On apprend:\n",
     "      M <- M + alpha_M * (I_s + gamma M(s') - M(s))\n",
@@ -559,14 +608,15 @@
     "    \"\"\"\n",
     "    delay = env.delay\n",
     "    T = delay + 1\n",
-    "    M = np.zeros((T, T))\n",
-    "    rhat = np.zeros(T)\n",
+    "    M = np.zeros((T, T))  # Successor matrix: occupation future attendue depuis chaque état temporel.\n",
+    "    rhat = np.zeros(T)    # Reward immédiate apprise séparément; sert à revaloriser vite.\n",
     "\n",
     "    deltas = np.zeros((n_trials, T))\n",
     "\n",
     "    for tr in range(n_trials):\n",
     "        # éventuellement changer la magnitude du reward en cours d'apprentissage\n",
     "        if change_reward_at is not None and tr == change_reward_at:\n",
+    "            # Revaluation en ligne: on change le reward pour tester la flexibilité de SR.\n",
     "            env.reward_mag = new_reward_mag\n",
     "\n",
     "        true_t, r = env.run_episode()\n",
@@ -577,6 +627,7 @@
     "\n",
     "            # valeur via SR\n",
     "            V = M[s] @ rhat\n",
+    "            # Valeur SR = produit M(s,·) par rhat : séparation dynamique/reward.\n",
     "            Vp = (M[sp] @ rhat) if sp is not None else 0.0\n",
     "\n",
     "            delta = r[t] + gamma * Vp - V\n",
@@ -584,6 +635,7 @@
     "\n",
     "            # update rhat (apprend la reward immédiate par état)\n",
     "            rhat[s] += alpha_r * (r[t] - rhat[s])\n",
+    "            # Apprentissage local de la reward par état (s).\n",
     "\n",
     "            # update M (SR TD)\n",
     "            target = np.zeros(T)\n",
@@ -591,6 +643,7 @@
     "            if sp is not None:\n",
     "                target += gamma * M[sp]\n",
     "            M[s] += alpha_M * (target - M[s])\n",
+    "            # Mise à jour SR: cible = identité + gamma*M(s'), pour encoder transitions futures.\n",
     "\n",
     "    return deltas, M, rhat\n",
     "\n",
@@ -598,6 +651,7 @@
     "d_sr, M, rhat = run_sr(env_sr, n_trials=500, change_reward_at=300, new_reward_mag=2.0)\n",
     "\n",
     "plot_trials(d_sr[250:300], \"SR - Juste avant changement de reward (mag=1)\")\n",
+    "# V réagit vite car M est déjà appris; la revaluation se fait via rhat sans réapprendre M.\n",
     "plot_trials(d_sr[320:370], \"SR - Après changement de reward (mag=2)\")\n"
    ]
   },
@@ -607,7 +661,10 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
-    "Le premier graphique (avant changement de reward) montre une erreur δ(t) stabilisée autour du cue et du reward attendu (mag=1). Après revalorisation du reward à 2 (second panneau), δ(t) réagit immédiatement en augmentant son amplitude positive sans réapprendre la structure temporelle : la Successor Representation ajuste vite grâce à la mise à jour de r̂.\n",
+    "Avant revaluation (mag=1), δ est stabilisé: le critic SR a déjà appris la structure temporelle via M. Après passage du reward à 2, le pic positif double quasi instantanément sans réapprendre le timing: M fixe la dynamique, rhat ajuste la valeur.\n",
+    "</div>\n",
+    "<div style=\"border-left: 5px solid #2ecc71; padding: 10px; background-color: #f0fff4; color: black;\">\n",
+    "Conclusion: SR factorise dynamique et récompense. On modélise ainsi une flexibilité aux changements de valeur (revaluation) qui est difficile pour TD classique. Cette propriété est souvent invoquée pour expliquer l'adaptation rapide observée en neuro lorsqu'un stimulus change de valeur.\n",
     "</div>\n"
    ]
   },
@@ -649,10 +706,7 @@
     "- TD(λ) accélère la propagation du signal dans le passé, ce qui rend l’apprentissage plus réaliste.\n",
     "- En ajoutant une incertitude sur le temps observé, on peut faire émerger des formes plus étalées du signal d’erreur (ramp),\n",
     "  ce qui est un phénomène discuté expérimentalement.\n",
-    "- La Successor Representation offre une autre lecture : elle sépare dynamique et récompense et facilite les mises à jour quand la reward change.\n",
-    "\n",
-    "Ce notebook ne \"prouve\" pas que la dopamine = TD, mais montre comment plusieurs choix de représentation et d’apprentissage\n",
-    "peuvent produire des signatures qualitativement différentes — donc des prédictions testables.\n"
+    "- La Successor Representation offre une autre lecture : elle sépare dynamique et récompense et facilite les mises à jour quand la reward change.\n"
    ]
   }
  ],
