--- a/Change_modelisation.ipynb
+++ b/Change_modelisation.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b69f5a63",
+   "metadata": {},
+   "source": [
+    "**Auteur : Agathe PASCAL**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad1e2658",
    "metadata": {},
    "source": [
