--- a/Explo_fr.ipynb
+++ b/Explo_fr.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "df3b338a",
+   "metadata": {},
+   "source": [
+    "**Auteur : Agathe PASCAL**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "180e8c52",
    "metadata": {},
    "source": [
