--- a/plus_loin.ipynb
+++ b/plus_loin.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "45bfdf75",
+   "metadata": {},
+   "source": [
+    "**Auteur : Agathe PASCAL**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "157a1964",
    "metadata": {},
    "source": [
