--- a/brouillon_agathe.ipynb
+++ b/brouillon_agathe.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3a1c200c",
+   "metadata": {},
+   "source": [
+    "**Auteur : Agathe PASCAL**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37b97297",
    "metadata": {},
    "source": [
